@@ -68,6 +68,7 @@ export(itis_name)
 export(itis_phymat_format)
 export(itis_taxrank)
 export(iucn_summary)
+export("%notin%")
 export(phylomatic_tree)
 export(plantminer)
 export(searchbycommonname)
