@@ -3,7 +3,7 @@
 \title{Get taxonomic names for a given taxonomic name query.}
 \usage{
   tax_name(query = NULL, get = NULL, db = "itis",
-    verbose = TRUE)
+    pref = "ncbi", verbose = TRUE)
 }
 \arguments{
   \item{query}{character; Vector of taxonomic names to
@@ -12,8 +12,12 @@
   \item{get}{character; The ranks of the taxonomic name to
   get.}
 
-  \item{db}{character; The database to search from: 'tis'
-  or 'ncbi'.}
+  \item{db}{character; The database to search from: 'tis',
+  'ncbi' or 'both'.  If 'both' both NCBI and ITIS will be
+  queried. Result will be the union of both.}
+
+  \item{pref}{If db='both', sets the preference for the
+  union. Either 'ncbi' or 'itis'.}
 
   \item{verbose}{logical; If TRUE the actual taxon queried
   is printed on the console.}
@@ -35,8 +39,11 @@ tax_name(query="Helianthus annuus", get="kingdom", db="itis")
 tax_name(query="Helianthus annuus", get="kingdom", db="ncbi")
 
 # multiple get arguments
-tax_name(query="Helianthus annuus", get=c("genus", "kingdom"), db="ncbi")
+tax_name(query=c("Helianthus annuus","Baetis rhodani"), get=c("genus", "kingdom"), db="ncbi")
 tax_name(query="xxx", get=c("genus", "kingdom"), db="itis")
+
+# query both
+tax_name(query=c("Helianthus annuus", 'Baetis rhodani'), get=c("genus", "kingdom"), db="both")
 }
 }
 
